fix: save vars for deposit-cli

--- a/default.env
+++ b/default.env
@@ -36,6 +36,11 @@ IPV6=false
 # If you use this, make sure to chown the directory to uid 10001
 ANCIENT_DIR=
 
+# Variables for deposit-cli
+NUM_VALIDATORS=1
+KEYSTORE_PASSWORD=
+EXECUTION_ADDRESS=
+
 # Promtail logs label, something unique like the server name
 LOGS_LABEL=eth-docker
 
@@ -329,4 +334,4 @@ DDNS_TAG=v2
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=12
+ENV_VERSION=13
