Allow debug on key import

--- a/staking-deposit-cli/Dockerfile
+++ b/staking-deposit-cli/Dockerfile
@@ -1,5 +1,5 @@
-from python:3.10-alpine as builder
-#from python:3.12-alpine as builder
+FROM python:3.10-alpine AS builder
+#FROM python:3.12-alpine AS builder
 
 ARG BUILD_TARGET
 ARG SRC_REPO
