--- a/default.env
+++ b/default.env
@@ -33,6 +33,8 @@ IPV6=false
 # Directory to keep ancient/static data. In use for Reth and Geth, optional.
 # If you use this, make sure to chown the directory to uid 10001
 ANCIENT_DIR=
+# Password for Lighthouse Siren
+SIREN_PASSWORD=
 
 # Promtail logs label, something unique like the server name
 LOGS_LABEL=eth-docker
@@ -86,8 +88,8 @@ PRYSM_UDP_PORT=9000
 CL_QUIC_PORT=9001
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
-# Local Siren UI port. Do not expose to Internet, it is insecure http
-SIREN_PORT=8080
+# Local Siren UI port
+SIREN_PORT=2443
 # Prometheus port used when exposing directly on host; used for federation
 PROMETHEUS_PORT=9090
 # Local key manager port. Reachable only via localhost. Also doubles as Prysm web port
@@ -306,4 +308,4 @@ DDNS_TAG=v2
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=12
+ENV_VERSION=13
