--- a/reth/Dockerfile.binary
+++ b/reth/Dockerfile.binary
@@ -1,5 +1,5 @@
-ARG DOCKER_TAG
-ARG DOCKER_REPO
+ARG DOCKER_TAG=latest
+ARG DOCKER_REPO=ghcr.io/paradigmxyz/reth
 
 FROM ${DOCKER_REPO}:${DOCKER_TAG}
 
