--- a/flashbots/Dockerfile.binary
+++ b/flashbots/Dockerfile.binary
@@ -1,5 +1,5 @@
-ARG DOCKER_TAG
-ARG DOCKER_REPO
+ARG DOCKER_TAG=latest
+ARG DOCKER_REPO=flashbots/mev-boost
 FROM ${DOCKER_REPO}:${DOCKER_TAG}
 
 # Unused, this is here to avoid build time complaints
