Support Teku IPv6

--- a/teku-cl-only.yml
+++ b/teku-cl-only.yml
@@ -45,6 +45,8 @@ services:
       - DEFAULT_GRAFFITI=true
       - WEB3SIGNER=false
       - NETWORK=${NETWORK}
+      - IPV6=${IPV6:-false}
+      - CL_P2P_PORT=${CL_P2P_PORT:-9000}
     ports:
       - ${HOST_IP:-}:${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/tcp
       - ${HOST_IP:-}:${CL_P2P_PORT:-9000}:${CL_P2P_PORT:-9000}/udp
