Support Erigon Caplin CL

--- a/erigon.yml
+++ b/erigon.yml
@@ -28,6 +28,12 @@ services:
       - NETWORK=${NETWORK}
       - IPV6=${IPV6:-false}
       - DOCKER_TAG=${ERIGON_DOCKER_TAG:-stable}
+      - COMPOSE_FILE=${COMPOSE_FILE}
+      - CL_P2P_PORT=${CL_P2P_PORT:-9000}
+      - CL_REST_PORT=${CL_REST_PORT:-5052}
+      - RAPID_SYNC_URL=${RAPID_SYNC_URL:-}
+      - MEV_BOOST=${MEV_BOOST:-false}
+      - MEV_NODE=${MEV_NODE:-}
     volumes:
       - erigon-el-data:/var/lib/erigon
       - /etc/localtime:/etc/localtime:ro
