OCD eth1 rename

--- a/besu.yml
+++ b/besu.yml
@@ -28,7 +28,8 @@ services:
       - ARCHIVE_NODE=${ARCHIVE_NODE:-}
       - NETWORK=${NETWORK}
     volumes:
-      - besu-eth1-data:/var/lib/besu
+      - besu-el-data:/var/lib/besu
+      - besu-eth1-data:/var/lib/besu-og
       - /etc/localtime:/etc/localtime:ro
       - jwtsecret:/var/lib/besu/ee-secret
     ports:
@@ -43,8 +44,6 @@ services:
     entrypoint:
       - docker-entrypoint.sh
       - /opt/besu/bin/besu
-      - --data-path
-      - /var/lib/besu
       - --p2p-port
       - ${EL_P2P_PORT:-30303}
       - --rpc-http-enabled
@@ -92,6 +91,7 @@ services:
     command: /bin/sh
 
 volumes:
+  besu-el-data:
   besu-eth1-data:
   jwtsecret:
 
