--- a/besu/Dockerfile.binary
+++ b/besu/Dockerfile.binary
@@ -23,6 +23,7 @@ RUN set -eux; \
         gosu nobody true
 
 # Create data mount point with permissions
+RUN mkdir -p /var/lib/besu-og && chown -R ${USER}:${USER} /var/lib/besu-og && chmod -R 700 /var/lib/besu-og
 RUN mkdir -p /var/lib/besu/ee-secret && chown -R ${USER}:${USER} /var/lib/besu && chmod -R 700 /var/lib/besu && chmod 777 /var/lib/besu/ee-secret
 
 # Cannot assume buildkit, hence no chmod
