--- a/besu/Dockerfile.source
+++ b/besu/Dockerfile.source
@@ -47,6 +47,7 @@ RUN adduser \
     --ingroup "${USER}" \
     "${USER}"
 
+RUN mkdir -p /var/lib/besu-og && chown -R ${USER}:${USER} /var/lib/besu-og && chmod -R 700 /var/lib/besu-og
 RUN mkdir -p /var/lib/besu/ee-secret && chown -R besu:besu /var/lib/besu && chmod -R 700 /var/lib/besu && chmod 777 /var/lib/besu/ee-secret
 
 # Cannot assume buildkit, hence no chmod
