Use Go 1.23 for source builds

--- a/default.env
+++ b/default.env
@@ -163,7 +163,7 @@ MEV_NODE=http://mev-boost:18550
 
 # You can set specific version targets and choose binary or compiled from source builds below,
 # via "Dockerfile.binary" or "Dockerfile.source"
-# These settings are only migrated when running "./ethd update --keep-targets"
+# These settings can be reset to defaults with "./ethd update --refresh-targets"
 # The default source build targets build from the latest github tag
 
 # Eth Docker updates its code to latest by default.
