feat: changes for upstream (#19)
* fix: remove env vars

* fix: remove unused operator-sample

* feat: reuse deposit-cli

* fix: remove unused file from gitignore

* fix: lidofinance -> eth-educators

* fix: add `--uid` flag for keys creation

* fix: message

* fix: MEV_BOOST should be enabled for Lido configs

* fix: reuse attention message

* fix: add `OBOL_CL_NODE` and `OBOL_EL_NODE` env vars

* fix: misleading msg

* fix: add env vars to `ALL_VARS`

* chore: bump `ENV_VERSION`

--- a/default.env
+++ b/default.env
@@ -3,8 +3,6 @@
 COMPOSE_FILE=teku.yml:besu.yml:deposit-cli.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
 FEE_RECIPIENT=
-# Set the ETH address that validator rewards should be sent to
-WITHDRAWAL_CREDENTIALS=
 # Decide whether to connect the CL to Flashbots MEV boost, and configure the VC to register with it.
 # Set MEV_BOOST to "true" for MEV boost, or any other value including empty for not using MEV boost.
 # If "true" and used with a CL, it also requires :mev-boost.yml in COMPOSE_FILE
@@ -37,11 +35,6 @@ IPV6=false
 ANCIENT_DIR=
 # Password for Lighthouse Siren
 SIREN_PASSWORD=
-
-# Variables for deposit-cli
-NUM_VALIDATORS=1
-KEYSTORE_PASSWORD=
-EXECUTION_ADDRESS=
 
 # Promtail logs label, something unique like the server name
 LOGS_LABEL=eth-docker
@@ -166,19 +159,16 @@ JWT_SECRET=
 DISTRIBUTED=
 # Authenticated execution client endpoint. This default uses the execution node container.
 EL_NODE=http://execution:8551
-# EL node for Lido Validator Ejector
-VE_EXECUTION_NODE_URL=http://execution:8551
 # Consensus client address. This could be comma-separated for Lighthouse or Teku VC clients, with failover,
 # or could just be a remote consensus client URL for "validator only" setups.
 # For Nimbus VC client, put the first beacon node here, and use VC_EXTRAS for additional.
 CL_NODE=http://consensus:5052
 # MEV-boost address. This would only be changed for Vouch setups
 MEV_NODE=http://mev-boost:18550
-# Beacon enpoint for OBOL node
-OBOL_NODE_BEACON_ENDPOINT=http://consensus:5052
-# Beacon enpoint for Lido Validator Ejector
-VE_BEACON_NODE_URL=http://consensus:5052
-LIDO_DV_EXIT_BEACON_NODE_URL=http://consensus:5052
+# Consensus client address for Charon and Lido Validator Ejector in Obol setup
+OBOL_CL_NODE=http://consensus:5052
+# Execution client address (RPC) for Lido Validator Ejector in Obol setup
+OBOL_EL_NODE=http://execution:8545
 
 # You can set specific version targets and choose binary or compiled from source builds below,
 # via "Dockerfile.binary" or "Dockerfile.source"
@@ -336,4 +326,4 @@ DDNS_TAG=v2
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=13
+ENV_VERSION=14
