Lido Community Staking integration (#1754)
* Lido integration (#4)

* feat: lido relays (#5)

* fix: change mech of relay selection for Lido (#6)

* fix: Obol integration

* fix: linter

* feat: add obol dashboards

* feat: add obol loki dashboards

* fix: obol metrics

* fix: use `.eth` instead of `.charon`

* feat: backup ENR public key to the file

* fix: `OWNER` for macOS

* fix: exitstatus check for charon-run-dkg

* feat: add ssv-dkg for Lido integration

* fix: linter

* fix: sed

* feat: backup .eth when exists

* fix: linter

* fix: charon dir

* fix: lido_ssv flow

* fix: permissions

* fix: jq for obol

* feat: add `--distributed` for prysm and lodestar

* fix: lint

* fix: obol flow

* fix: linter

* fix: Relays list window size

* fix: obol flow

* fix: backup folder with keys

* fix: linter

* fix: prysm rest api

* fix: add mkdir for obol

* fix: add `--publish` flag to dkg

* feat: add LIDO_DV_EXIT_EXIT_EPOCH

* fix: update image for lido-dv-exit

* fix: lido-dv-exit and exit epoch

* fix: ssv-dkg config path

* fix: ssv dashboard

* fix: lido ssv flow

* fix: add curl-jq

* chore: remove goerli

* fix: compose files

* fix: permissions

* feat: holesky relays, user flow adjustment

* feat: update VE_ORACLE_ADDRESSES_ALLOWLIST for holesky

* fix: extra chown for .eth

* fix: add `-u` for enr and dkg services

* fix: linter

* Fix: Argument list too long error when verifying Oblol cluster definition

* feat: automatic import N keystore files with different passwords

* Fix: "Argument list too long" when verifying existing cluster definition file

* Fix: pre-commit errors "SC2046 (warning): Quote this to prevent word splitting"

* chore: fix typo

* chore: update `VE_ORACLE_ADDRESSES_ALLOWLIST` for holesky

* feat: `distributed` arg for lh, nim, teku VC clients

* fix: `OBOL_NODE_TAG` -> `CHARON_VERSION`

* fix: charon version

* feat: csm te

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ ext-network.yml
 ext-network.yml.original
 ext-network.yml.bak
 .eth/*
+.eth_backup*
+.charon/*
+validator-ejector/*
 !.eth/README.md
 !.eth/validator_keys/.empty
 !.eth/exit_messages/.empty
