--- a/default.env
+++ b/default.env
@@ -79,6 +79,9 @@ HOST_IP=
 # IP address to use when host-mapping a port through *-shared.yml. Set this to 127.0.0.1 to restrict the share to localhost
 SHARE_IP=
 
+# Relays to connect charon node
+OBOL_P2P_RELAYS=
+
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
 EL_P2P_PORT=30303
@@ -115,6 +118,8 @@ SSV_P2P_PORT=13001
 SSV_P2P_PORT_UDP=12001
 # SSV DKG port
 SSV_DKG_PORT=3030
+# OBOL Node ports
+OBOL_P2P_PORT=3610
 # Engine port. Only for distributed setups, this should otherwise be left alone
 EE_PORT=8551
 # Consensus layer REST port. Only for distributed setups, this should otherwise be left alone
@@ -160,6 +165,10 @@ EL_NODE=http://execution:8551
 CL_NODE=http://consensus:5052
 # MEV-boost address. This would only be changed for Vouch setups
 MEV_NODE=http://mev-boost:18550
+# Consensus client address for Charon and Lido Validator Ejector in Obol setup
+OBOL_CL_NODE=http://consensus:5052
+# Execution client address (RPC) for Lido Validator Ejector in Obol setup
+OBOL_EL_NODE=http://execution:8545
 
 # You can set specific version targets and choose binary or compiled from source builds below,
 # via "Dockerfile.binary" or "Dockerfile.source"
@@ -173,6 +182,15 @@ ETH_DOCKER_TAG=
 # SSV
 SSV_NODE_TAG=latest
 SSV_DKG_TAG=latest
+
+# Lido OBOL
+CHARON_VERSION=latest
+VE_OPERATOR_ID=
+VE_STAKING_MODULE_ID=
+VE_LOCATOR_ADDRESS=
+VE_ORACLE_ADDRESSES_ALLOWLIST=
+ENABLE_DIST_ATTESTATION_AGGR=
+LIDO_DV_EXIT_EXIT_EPOCH=
 
 # MEV-Boost
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
@@ -308,4 +326,4 @@ DDNS_TAG=v2
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=13
+ENV_VERSION=14
