--- a/grafana-cloud.yml
+++ b/grafana-cloud.yml
@@ -69,8 +69,8 @@ services:
     volumes:
       - /:/host:ro,rslave
       - /etc/hostname:/etc/nodename:ro
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
+      - /proc:/host/proc:ro,rslave
+      - /sys:/host/sys:ro,rslave
       - /etc/localtime:/etc/localtime:ro
     <<: *logging
     labels:
@@ -114,7 +114,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /:/rootfs:ro,rslave
       - /var/run:/var/run
-      - /sys:/sys:ro
+      - /sys:/sys:ro,rslave
       - /var/lib/docker:/var/lib/docker:ro,rslave
     command:
       - --docker_only
