--- a/default.env
+++ b/default.env
@@ -181,7 +181,9 @@ ETH_DOCKER_TAG=
 
 # SSV
 SSV_NODE_TAG=latest
+SSV_NODE_REPO=bloxstaking/ssv-node
 SSV_DKG_TAG=latest
+SSV_DKG_REPO=bloxstaking/ssv-dkg
 
 # Lido OBOL
 CHARON_VERSION=latest
@@ -326,4 +328,4 @@ DDNS_TAG=v2
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=14
+ENV_VERSION=15
