--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,5 @@ ssv-config/config.yaml
 ssv-config/config.yaml.original
 ssv-config/dkg-config.yaml
 ssv-config/dkg-config.yaml.original
+commit-boost/cb-config.toml
 .nada
