--- a/besu.yml
+++ b/besu.yml
@@ -27,6 +27,7 @@ services:
       - EL_EXTRAS=${EL_EXTRAS:-}
       - ARCHIVE_NODE=${ARCHIVE_NODE:-}
       - NETWORK=${NETWORK}
+      - IPV6=${IPV6:-false}
     volumes:
       - besu-el-data:/var/lib/besu
       - besu-eth1-data:/var/lib/besu-og
