--- a/nethermind.yml
+++ b/nethermind.yml
@@ -81,6 +81,8 @@ services:
       - "6060"
       - --Pruning.FullPruningCompletionBehavior
       - AlwaysShutdown
+      - --Discovery.Discv5Enabled
+      - "true"
       - --log
       - ${LOG_LEVEL}
     labels:
