--- a/lighthouse-cl-only.yml
+++ b/lighthouse-cl-only.yml
@@ -63,6 +63,9 @@ services:
       - 0.0.0.0
       - --http-port
       - ${CL_REST_PORT:-5052}
+      - --http-allow-origin=*
+      - --listen-address
+      - 0.0.0.0
       - --port
       - ${CL_P2P_PORT:-9000}
       - --quic-port
