Fix: add charon cl endpoint environment variable

--- a/default.env
+++ b/default.env
@@ -165,7 +165,9 @@ EL_NODE=http://execution:8551
 CL_NODE=http://consensus:5052
 # MEV-boost address. This would only be changed for Vouch setups
 MEV_NODE=http://mev-boost:18550
-# Consensus client address for Charon and Lido Validator Ejector in Obol setup
+# Consensus client addresses for Charon in Obol setup
+OBOL_CHARON_CL_ENDPOINTS=http://consensus:5052
+# Consensus client address for Lido DV Exit and Lido Validator Ejector services in Obol setup
 OBOL_CL_NODE=http://consensus:5052
 # Execution client address (RPC) for Lido Validator Ejector in Obol setup
 OBOL_EL_NODE=http://execution:8545
