--- a/lido-obol.yml
+++ b/lido-obol.yml
@@ -14,7 +14,7 @@ services:
       - .eth:/opt/charon/.charon
     <<: *logging
     environment:
-      - CHARON_BEACON_NODE_ENDPOINTS=${OBOL_CL_NODE:-http://consensus:5052}
+      - CHARON_BEACON_NODE_ENDPOINTS=${OBOL_CHARON_CL_ENDPOINTS:-http://consensus:5052}
       - CHARON_LOG_LEVEL=${OBOL_LOG_LEVEL:-debug}
       - CHARON_LOG_FORMAT=${OBOL_LOG_FORMAT:-console}
       - CHARON_P2P_RELAYS=${OBOL_P2P_RELAYS:-https://0.relay.obol.tech,https://1.relay.obol.tech/}
