Fix: add Lido DV Exit container image verion to default.env

--- a/default.env
+++ b/default.env
@@ -195,6 +195,7 @@ VE_LOCATOR_ADDRESS=
 VE_ORACLE_ADDRESSES_ALLOWLIST=
 ENABLE_DIST_ATTESTATION_AGGR=
 LIDO_DV_EXIT_EXIT_EPOCH=
+LIDO_DV_EXIT_VERSION=
 
 # Commit-Boost
 CB_PBS_DOCKER_TAG=latest
