Fix: Broken `Lido DV Exit` and `Lido validator ejector` when a secondery CL client is added to `Charon` (#1950)
* Fix: add charon cl endpoint environment variable

* Fix: add Lido DV Exit container image verion to default.env

* Fix typos in some environment variables; Add OBOL_CHARON_CL_ENDPOINTS and LIDO_DV_EXIT_VERSION to environment migration; Bump environment version to 18;

* Fix: missing whitespace

Co-authored-by: yorickdowne <71337066+yorickdowne@users.noreply.github.com>

---------

Co-authored-by: yorickdowne <71337066+yorickdowne@users.noreply.github.com>

--- a/default.env
+++ b/default.env
@@ -167,7 +167,9 @@ EL_NODE=http://execution:8551
 CL_NODE=http://consensus:5052
 # MEV-boost address. This would only be changed for Vouch setups
 MEV_NODE=http://mev-boost:18550
-# Consensus client address for Charon and Lido Validator Ejector in Obol setup
+# Consensus client addresses for Charon in Obol setup
+OBOL_CHARON_CL_ENDPOINTS=http://consensus:5052
+# Consensus client address for Lido DV Exit and Lido Validator Ejector services in Obol setup
 OBOL_CL_NODE=http://consensus:5052
 # Execution client address (RPC) for Lido Validator Ejector in Obol setup
 OBOL_EL_NODE=http://execution:8545
@@ -195,6 +197,7 @@ VE_LOCATOR_ADDRESS=
 VE_ORACLE_ADDRESSES_ALLOWLIST=
 ENABLE_DIST_ATTESTATION_AGGR=
 LIDO_DV_EXIT_EXIT_EPOCH=
+LIDO_DV_EXIT_VERSION=
 
 # Commit-Boost
 CB_PBS_DOCKER_TAG=latest
@@ -333,4 +336,4 @@ DDNS_TAG=v2
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=17
+ENV_VERSION=18
