Prysm back to RPC and use http parameter

--- a/.github/workflows/test-prysm-geth.yml
+++ b/.github/workflows/test-prysm-geth.yml
@@ -31,6 +31,9 @@ jobs:
           FEE_RECIPIENT=0xDccf8451070a86183eE70D330C4c43b686E9CF86
           var=FEE_RECIPIENT
           set_value_in_env
+          CL_NODE=consensus:4000
+          var=CL_NODE
+          set_value_in_env
       - name: Start Prysm/Geth
         run: ./ethd up
       - name: Pause for 30 seconds
