--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: Lint sources
         run: |
-          pip install pre-commit
+          sudo apt-get update && sudo apt-get install -y pre-commit
           pre-commit run --all-files
