--- a/prysm.yml
+++ b/prysm.yml
@@ -139,6 +139,7 @@ services:
       - 0.0.0.0
       - --monitoring-port
       - "8009"
+      - --web
       - --http-host
       - 0.0.0.0
       - --http-port
@@ -148,6 +149,8 @@ services:
       - consensus:5052
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
+      - --wallet-password-file
+      - /var/lib/prysm/password.txt
     depends_on:
       - consensus
     labels:
