--- a/erigon/Dockerfile.source
+++ b/erigon/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build Erigon in a stock Go build container
-FROM golang:1.23-alpine AS builder
+FROM golang:1.23-bookworm AS builder
 
 # Unused, this is here to avoid build time complaints
 ARG DOCKER_TAG
@@ -8,21 +8,26 @@ ARG DOCKER_REPO
 ARG BUILD_TARGET
 ARG SRC_REPO
 
-RUN apk update && apk add --no-cache make gcc g++ musl-dev linux-headers git bash
-
 WORKDIR /src
-RUN bash -c "git clone --recurse-submodules -j8 ${SRC_REPO} erigon && cd erigon && git config advice.detachedHead false && git fetch --all --tags && \
+RUN bash -c "git clone ${SRC_REPO} erigon && cd erigon && git config advice.detachedHead false && git fetch --all --tags && \
 if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:erigon-pr; git checkout erigon-pr; else git checkout ${BUILD_TARGET}; fi && make BUILD_TAGS=nosqlite,noboltdb,nosilkworm erigon"
 
 # Pull all binaries into a second stage deploy container
-FROM alpine:3
+FROM debian:bookworm-slim
 
 ARG USER=erigon
 ARG UID=10001
 # GID 10002 is deliberate so it can exchange secret with CL
 ARG GID=10002
 
-RUN apk add --no-cache libgcc libstdc++ bash ca-certificates tzdata su-exec git jq
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y --no-install-recommends \
+  ca-certificates \
+  tzdata \
+  gosu \
+  git \
+  jq \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*
 
 RUN addgroup \
     --gid "${GID}" \
