stats survive docker upgrade and reboot

--- a/nimbus-stats.yml
+++ b/nimbus-stats.yml
@@ -1,6 +1,7 @@
 # Send client stats to beaconcha.in service using client-metrics-exporter
 services:
   client-stats:
+    restart: "unless-stopped"
     image: gobitfly/eth2-client-metrics-exporter:latest
     volumes:
       - /etc/localtime:/etc/localtime:ro
