feat: :sparkles: added max peers to Reth (EL) (#1985)
* feat: :sparkles: added max peers to Reth (EL)

* chore: updated reth max peers to 100 (default)

--- a/reth.yml
+++ b/reth.yml
@@ -83,6 +83,8 @@ services:
       - ${EE_PORT:-8551}
       - --authrpc.jwtsecret
       - /var/lib/reth/ee-secret/jwtsecret
+      - --max-outbound-peers
+      - ${EL_MAX_PEER_COUNT:-100}
     labels:
       - metrics.scrape=true
       - metrics.path=/metrics
