--- a/default.env
+++ b/default.env
@@ -165,7 +165,7 @@ JWT_SECRET=
 DISTRIBUTED=
 # Authenticated execution client endpoint. This default uses the execution node container.
 EL_NODE=http://execution:8551
-# Consensus client address. This could be comma-separated for Lighthouse or Teku VC clients, with failover,
+# Consensus client address. This could be comma-separated for Lighthouse, Nimbus or Teku VC clients, with failover,
 # or could just be a remote consensus client URL for "validator only" setups.
 # For Nimbus VC client, put the first beacon node here, and use VC_EXTRAS for additional.
 CL_NODE=http://consensus:5052
