--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -40,7 +40,7 @@ services:
     networks:
       default:
         aliases:
-          - vc
+          - ${VC_ALIAS}
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -123,7 +123,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/lodestar/validators/validator-db/api-token.txt
-      - vc
+      - ${VC_ALIAS}
 
 volumes:
   lsvalidator-data:
