--- a/lodestar.yml
+++ b/lodestar.yml
@@ -115,7 +115,7 @@ services:
     networks:
       default:
         aliases:
-          - vc
+          - ${VC_ALIAS}
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -200,7 +200,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/lodestar/validators/validator-db/api-token.txt
-      - vc
+      - ${VC_ALIAS}
 
 volumes:
   lsconsensus-data:
