--- a/nimbus.yml
+++ b/nimbus.yml
@@ -106,7 +106,7 @@ services:
     networks:
       default:
         aliases:
-          - vc
+          - ${VC_ALIAS}
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -162,7 +162,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/nimbus/api-token.txt
-      - vc
+      - ${VC_ALIAS}
 
 volumes:
   nimbus-consensus-data:
