--- a/prysm-vc-only.yml
+++ b/prysm-vc-only.yml
@@ -41,7 +41,7 @@ services:
     networks:
       default:
         aliases:
-          - vc
+          - ${VC_ALIAS}
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -167,7 +167,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/prysm/auth-token
-      - vc
+      - ${VC_ALIAS}
 
 volumes:
   prysmvalidator-data:
