--- a/teku-vc-only.yml
+++ b/teku-vc-only.yml
@@ -39,7 +39,7 @@ services:
     networks:
       default:
         aliases:
-          - vc
+          - ${VC_ALIAS}
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -111,7 +111,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/teku/validator/key-manager/validator-api-bearer
-      - vc
+      - ${VC_ALIAS}
 
 volumes:
   teku-data:
