--- a/teku.yml
+++ b/teku.yml
@@ -111,7 +111,7 @@ services:
     networks:
       default:
         aliases:
-          - vc
+          - ${VC_ALIAS}
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -184,7 +184,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/teku/validator/key-manager/validator-api-bearer
-      - vc
+      - ${VC_ALIAS}
 
 volumes:
   tekuconsensus-data:
