--- a/lighthouse-vc-only.yml
+++ b/lighthouse-vc-only.yml
@@ -39,7 +39,7 @@ services:
     networks:
       default:
         aliases:
-          - vc
+          - ${VC_ALIAS}
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -130,7 +130,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/lighthouse/validators/api-token.txt
-      - vc
+      - ${VC_ALIAS}
 
 volumes:
   lhvalidator-data:
