--- a/default.env
+++ b/default.env
@@ -114,7 +114,7 @@ EL_RPC_PORT=8545
 # Note that for Erigon, this needs to match EL_RPC_PORT *if* you use traefik, and only then
 # Do not change it for Erigon and el-shared.yml
 EL_WS_PORT=8546
-# Erigon's torrent port. Don't make this 42070, that'll fail
+# Erigon's torrent port. Don't make this 42070, as it will fail
 ERIGON_TORRENT_PORT=42069
 # Erigon's second and third P2P port, used for multiple eth/xx P2P protocols
 ERIGON_P2P_PORT_2=30304
