Detected Docker root dir on startup (#1990)

--- a/default.env
+++ b/default.env
@@ -337,6 +337,8 @@ DDNS_TAG=v2
 
 # For the Node Dashboard, define a regex of mount points to ignore for the diskspace check.
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
+# And the Docker root so promtail scrapes logs from the right location. This is updated by ethd
+DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=19
+ENV_VERSION=20
