Make validator alias configurable (#1989)

--- a/nimbus-vc-only.yml
+++ b/nimbus-vc-only.yml
@@ -43,7 +43,7 @@ services:
     networks:
       default:
         aliases:
-          - vc
+          - ${VC_ALIAS}
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -98,7 +98,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/nimbus/api-token.txt
-      - vc
+      - ${VC_ALIAS}
 
 volumes:
   nimbus-vc-data:
