--- a/default.env
+++ b/default.env
@@ -170,6 +170,8 @@ EL_NODE=http://execution:8551
 CL_NODE=http://consensus:5052
 # MEV-boost address. This would only be changed for Vouch setups
 MEV_NODE=http://mev-boost:18550
+# Used by "ethd keys", adjust this if you have multiple Eth Docker stacks connected to the same Docker bridge network
+VC_ALIAS=vc
 # Consensus client addresses for Charon in Obol setup
 OBOL_CHARON_CL_ENDPOINTS=http://consensus:5052
 # Consensus client address for Lido DV Exit and Lido Validator Ejector services in Obol setup
